changes to index page

--- a/index.html
+++ b/index.html
@@ -58,91 +58,67 @@
         </div>
     </nav>
 
-    <div class="container">
-        <div class="row">
+    <div class="container page-content-section">
+        <div class="row banner">
             <div class="col-md-6">
-                <div class="box row">
-                    <div class="col-md-12">
-                        <img class="img-responsive img-border-left" src="img/civil.jpg" alt="">
-                    </div>
-                    <div class="col-md-12">
-                        <p>
-                            Catalyst Technical Group, Inc. (CTG) is a <strong>ONE STOP SHOP</strong> for Project Planning and Permitting. CTG offers 
-                            many advantages in the execution of work on your project, offering expertise in <strong>Planning & Design, 
-                            Architecture, Civil, MEP, Structural Engineering and Construction Administration</strong> under one roof. We 
-                            provide the client with a knowledge-based company to complete a project in a functional and creative 
-                            manner. We focus on solid design and sound planning with the needs and desires of our clients as our 
-                            main priority. Our team of professionals have extensive experience in providing comprehensive design 
-                            and consulting services from project conception to completion.
-                        </p>
-                        <p>
-                            CTG provides high quality design in a wide array of industries including <strong>Commercial, Hospitality, Retail
-                            and Residential etc.</strong> Our diversity and expansive project knowledge is considered our largest asset. CTG 
-                            has completed designs for various types of projects throughout Texas.
-                        </p>
-                        <p>
-                            Catalyst Technical Group  has found great success utilizing a team approach that has lead to effectively 
-                            identifying problems and defining solutions. Our association with a multitude of design firms provides us 
-                            with a strong base for tackling all kinds of your Engineering needs, irrespective of their size and 
-                            geographic location. An energetic and innovative design staff along with the comprehensive use of 
-                            technology allows us to work efficiently and precisely, creating an on time delivery as well as lower 
-                            costs.
-                        </p>
-                    </div>
+                <div class="img-stripe-border">
+                    <img class="img-responsive" src="img/civil.jpg" alt="">
                 </div>
             </div>
             <div class="col-md-6">
-                <div class="tab-container">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <a class="tab-link" href="./services.html#civil">
-                                <div class="tab-box tab-box-image tab-box-civil">
-                                    <h4>Civil Engineering</h4>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col-md-6">
-                            <a class="tab-link" href="./services.html#structural">
-                                <div class="tab-box tab-box-image tab-box-structural">
-                                    <h4>Structural</h4>
-                                </div>
-                            </a>
-                        </div>
+                We are one stop shop for Planning & Design, Architecture, Civil, MEP, Structural Engineering and Construction Administration.
+            </div>
+        </div>
+        <div class="row services">
+            <div class="col-md-4">
+                <section>
+                    <div class="img-stripe-border">
+                        <img class="img-responsive" src="img/civil.jpg" alt="">
                     </div>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <a class="tab-link" href="./services.html#mep">
-                                <div class="tab-box tab-box-image tab-box-mep">
-                                    <h4>MEP</h4>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col-md-6">
-                            <a class="tab-link" href="./services.html#architectural">
-                                <div class="tab-box tab-box-image tab-box-architecture">
-                                    <h4>Architectural</h4>
-                                </div>
-                            </a>
-                        </div>
+                    <h4>Civil Engineering</h4>
+                </section>
+            </div>
+            <div class="col-md-4">
+                <section>
+                    <div class="img-stripe-border">
+                        <img class="img-responsive" src="img/structural.jpg" alt="">
                     </div>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <a class="tab-link" href="./services.html#permit">
-                                <div class="tab-box tab-box-image tab-box-permit">
-                                    <h4>Permit Co-ordination</h4>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col-md-6">
-                            <a class="tab-link" href="./services.html#platting">
-                                <div class="tab-box tab-box-image tab-box-plat">
-                                    <h4>Platting</h4>
-                                </div>
-                            </a>
-                        </div>
+                    <h4>Structural</h4>
+                </section>
+            </div>
+            <div class="col-md-4">
+                <section>
+                    <div class="img-stripe-border">
+                        <img class="img-responsive" src="img/mep.jpg" alt="">
                     </div>
-                </div>
-
+                    <h4>MEP</h4>
+                </section>
+            </div>
+        </div>
+        <div class="row services">
+            <div class="col-md-4">
+                <section>
+                    <div class="img-stripe-border">
+                        <img class="img-responsive" src="img/architecture.jpg" alt="">
+                    </div>
+                     <h4>Architectural</h4>
+                </section>
+            </div>
+            <div class="col-md-4">
+                <section>
+                    <div class="img-stripe-border">
+                        <img class="img-responsive" src="img/permit.jpg" alt="">
+                    </div>
+                    <h4>Permit Co-ordination</h4>
+                </section>
+            </div>
+            <div class="col-md-4">
+                <section>
+                    <div class="img-stripe-border">
+                        <img class="img-responsive" src="img/plat.jpg" alt="">
+                    </div>
+                    <h4>Platting</h4>
+                </section>
             </div>
         </div>
     </div>
@@ -152,7 +128,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; CTG 2014</p>
+                    <p>Copyright &copy; CTG 2016</p>
                 </div>
             </div>
         </div>
