--- a/resources.html
+++ b/resources.html
@@ -58,7 +58,7 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container page-content-section">
         <div class="row">
             <div class="box">
                 <div class="col-lg-12">
@@ -77,7 +77,7 @@
                         </dl>
                         <dl>
                           <dt>Harris County</dt>
-                          <dd><a href="www.co.harris.tx.us" target="harris" title="">Harris County</a></dd>
+                          <dd><a href="http://www.harriscountytx.gov/" target="harris" title="">http://www.harriscountytx.gov/</a></dd>
                         </dl>
                         <dl>
                           <dt>Permit</dt>
@@ -107,7 +107,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; CTG 2014</p>
+                    <p>Copyright &copy; CTG 2016</p>
                 </div>
             </div>
         </div>
