--- a/services.html
+++ b/services.html
@@ -59,7 +59,7 @@
         </div>
     </nav>
     
-    <div class="container">
+    <div class="container page-content-section">
         <div class="service-container">
             <div class="row">
                 <div class="col-md-4 tab-box-civil services-img">
@@ -206,7 +206,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; CTG 2014</p>
+                    <p>Copyright &copy; CTG 2016</p>
                 </div>
             </div>
         </div>
