--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container page-content-section">
         <div class="row">
             <div class="col-lg-12">
                 <p id="message" class="alert">
@@ -84,7 +84,7 @@
                         </div>
                         <div class="form-group col-lg-12">
                             <input type="hidden" name="save" value="contact">
-                            <button id="btnSubmit" type="submit" class="btn btn-default">Submit</button>
+                            <button id="btnSubmit" type="submit" class="btn btn-primary">Submit</button>
                         </div>
                     </div>
                 </form>
@@ -116,7 +116,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; CTG 2014</p>
+                    <p>Copyright &copy; CTG 2016</p>
                 </div>
             </div>
         </div>
