--- a/projects.html
+++ b/projects.html
@@ -58,7 +58,7 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container page-content-section">
         <div class="box">
             <div class="row">
                 <div class="col-sm-4 text-center">
@@ -111,7 +111,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; CTG 2014</p>
+                    <p>Copyright &copy; CTG 2016</p>
                 </div>
             </div>
         </div>
