--- a/resources.html
+++ b/resources.html
@@ -11,6 +11,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
 
     <!-- Add custom CSS here -->
     <link href="css/base.css" rel="stylesheet">
@@ -37,7 +38,6 @@
                 <div class="navigation-wrapper">
                     <div class="brand">
                         <span>Catalyst Technical Group, INC.</span>
-                        <span class="contact-number">713.906.6177</span>
                     </div>
                     <div class="collapse navbar-collapse navbar-ex1-collapse">
                         <ul class="nav navbar-nav">
@@ -64,31 +64,30 @@
                 <div class="col-lg-12">
                     <div class="resources-info">
                         <dl>
-                          <dt>City of Houston</dt>
+                          <dt><i class="fa fa-bookmark" aria-hidden="true"></i> City of Houston</dt>
                           <dd><a href="http://www.houstontx.gov" target="houstontx" title="">http://www.houstontx.gov</a></dd>
                         </dl>
                         <dl>
-                          <dt>Permit status city of Houston</dt>
+                          <dt><i class="fa fa-bookmark" aria-hidden="true"></i> Permit status city of Houston</dt>
                           <dd><a href="http://pdinet.pd.ci.houston.tx.us/cohilms/webs/Plan_LookUp.asp" target="permitStatus" title="">http://pdinet.pd.ci.houston.tx.us/cohilms/webs/Plan_LookUp.asp</a></dd>
                         </dl>
                         <dl>
-                          <dt>Geographic Information & Management System- Publics works and engineering City of Houston , GIS </dt>
-                          <dd><a href="www.gims.houstontx.gov" target="GIMS" title="">www.gims.houstontx.gov</a></dd>
+                          <dt><i class="fa fa-bookmark" aria-hidden="true"></i> Geographic Information & Management System- Publics works and engineering City of Houston , GIS </dt>
+                          <dd>
+                              <a href="www.gims.houstontx.gov" target="GIMS" title="">www.gims.houstontx.gov</a>
+                              <a href="http://www.co.harris.tx.us/itc/gis" target="GIMSHarris" title="">http://www.co.harris.tx.us/itc/gis</a>
+                          </dd>
                         </dl>
                         <dl>
-                          <dt>Harris County</dt>
+                          <dt><i class="fa fa-bookmark" aria-hidden="true"></i> Harris County</dt>
                           <dd><a href="http://www.harriscountytx.gov/" target="harris" title="">http://www.harriscountytx.gov/</a></dd>
                         </dl>
                         <dl>
-                          <dt>Permit</dt>
+                          <dt><i class="fa fa-bookmark" aria-hidden="true"></i> Permit</dt>
                           <dd><a href="http://www.eng.hctx.net/PERMITSs" target="permits" title="">http://www.eng.hctx.net/PERMITSs</a></dd>
                         </dl>
                         <dl>
-                          <dt>Geographic Information & Management System- Publics works and engineering - Harris County, GIS</dt>
-                          <dd><a href="http://www.co.harris.tx.us/itc/gis" target="GIMSHarris" title="">http://www.co.harris.tx.us/itc/gis</a></dd>
-                        </dl>
-                        <dl>
-                          <dt>FEMA: Flood areas</dt>
+                          <dt><i class="fa fa-bookmark" aria-hidden="true"></i> FEMA: Flood areas</dt>
                           <dd>
                               <a href="www.fema.gov" target="fema" title="">www.fema.gov</a><br/>
                               <a href="www.msc.fema.gov" target="femaMSC" title="">www.msc.fema.gov</a><br/>
