--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
                 <div class="navigation-wrapper">
                     <div class="brand">
                         <span>Catalyst Technical Group, INC.</span>
-                        <span class="contact-number">713.906.6177</span>
                     </div>
                     <div class="collapse navbar-collapse navbar-ex1-collapse">
                         <ul class="nav navbar-nav">
@@ -59,7 +58,7 @@
     </nav>
 
     <div class="container page-content-section">
-        <div class="row banner">
+        <div class="row banner margin-bottom-60">
             <div class="col-md-6">
                 <div class="img-stripe-border">
                     <img class="img-responsive" src="img/civil.jpg" alt="">
@@ -69,58 +68,84 @@
                 We are one stop shop for Planning & Design, Architecture, Civil, MEP, Structural Engineering and Construction Administration.
             </div>
         </div>
-        <div class="row services">
-            <div class="col-md-4">
-                <section>
-                    <div class="img-stripe-border">
-                        <img class="img-responsive" src="img/civil.jpg" alt="">
-                    </div>
-                    <h4>Civil Engineering</h4>
-                </section>
+        <hr class="seperator"/>
+        <section class="margin-bottom-60">
+            <h2 class="section-headings">Services We Offer</h2>
+            <div class="row services">
+                <div class="col-md-4">
+                    <a class="tab-link" href="./services.html#civil">
+                        <div class="img-stripe-border">
+                            <img class="img-responsive" src="img/civil.jpg" alt="">
+                        </div>
+                        <h4>Civil Engineering</h4>
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a class="tab-link" href="./services.html#structural">
+                        <div class="img-stripe-border">
+                            <img class="img-responsive" src="img/structural.jpg" alt="">
+                        </div>
+                        <h4>Structural</h4>
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a class="tab-link" href="./services.html#mep">
+                        <div class="img-stripe-border">
+                            <img class="img-responsive" src="img/mep.jpg" alt="">
+                        </div>
+                        <h4>MEP</h4>
+                    </a>
+                </div>
             </div>
-            <div class="col-md-4">
-                <section>
-                    <div class="img-stripe-border">
-                        <img class="img-responsive" src="img/structural.jpg" alt="">
-                    </div>
-                    <h4>Structural</h4>
-                </section>
+            
+            <div class="row services">
+                <div class="col-md-4">
+                    <a class="tab-link" href="./services.html#architectural">
+                        <div class="img-stripe-border">
+                            <img class="img-responsive" src="img/architecture.jpg" alt="">
+                        </div>
+                        <h4>Architectural</h4>
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a class="tab-link" href="./services.html#permit">
+                        <div class="img-stripe-border">
+                            <img class="img-responsive" src="img/permit.jpg" alt="">
+                        </div>
+                        <h4>Permit Co-ordination</h4>
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <a class="tab-link" href="./services.html#platting">
+                        <div class="img-stripe-border">
+                            <img class="img-responsive" src="img/plat.jpg" alt="">
+                        </div>
+                        <h4>Platting</h4>
+                    </a>
+                </div>
             </div>
-            <div class="col-md-4">
-                <section>
-                    <div class="img-stripe-border">
-                        <img class="img-responsive" src="img/mep.jpg" alt="">
-                    </div>
-                    <h4>MEP</h4>
-                </section>
+        </section>
+        <hr class="seperator"/>
+        <section class="margin-bottom-60">
+            <h2 class="section-headings">Know More About CTG</h2>
+            <div class="row">
+                <div class="col-md-4">
+                    <section class="additional-info">
+                        <h4>Who We Are</h4>
+                    </section>
+                </div>
+                <div class="col-md-4">
+                    <section class="additional-info">
+                        <h4>Latest Projects</h4>
+                    </section>
+                </div>
+                <div class="col-md-4">
+                    <section class="additional-info">
+                        <h4>Why Work with CTG</h4>
+                    </section>
+                </div>
             </div>
-        </div>
-        <div class="row services">
-            <div class="col-md-4">
-                <section>
-                    <div class="img-stripe-border">
-                        <img class="img-responsive" src="img/architecture.jpg" alt="">
-                    </div>
-                     <h4>Architectural</h4>
-                </section>
-            </div>
-            <div class="col-md-4">
-                <section>
-                    <div class="img-stripe-border">
-                        <img class="img-responsive" src="img/permit.jpg" alt="">
-                    </div>
-                    <h4>Permit Co-ordination</h4>
-                </section>
-            </div>
-            <div class="col-md-4">
-                <section>
-                    <div class="img-stripe-border">
-                        <img class="img-responsive" src="img/plat.jpg" alt="">
-                    </div>
-                    <h4>Platting</h4>
-                </section>
-            </div>
-        </div>
+        </section>
     </div>
     <!-- /.container -->
 
