--- a/resources.html
+++ b/resources.html
@@ -19,44 +19,46 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-default" role="navigation">
+    <header class="header-wrapper">
         <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="index.html">CTG, INC.</a>
-            </div><div class="header-wrapper">
-                <div class="logo-wrapper">
-                    <a class="logo-link" href="index.html">
-                        <img src="img/logo.png" class="logo"></img>
-                    </a>
-                </div>
-                <div class="navigation-wrapper">
-                    <div class="brand">
-                        <span>Catalyst Technical Group, INC.</span>
-                    </div>
-                    <div class="collapse navbar-collapse navbar-ex1-collapse">
-                        <ul class="nav navbar-nav">
-                            <li><a href="index.html">Home</a>
-                            </li>
-                            <li><a href="projects.html">Projects</a>
-                            </li>
-                            <li><a href="services.html">Services</a>
-                            </li>
-                            <li><a href="resources.html" class="active">Resources</a>
-                            </li>
-                            <li><a href="contact.html">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
+            <div class="logo-wrapper">
+                <a class="logo-link" href="index.html">
+                    <img src="img/logo.png" class="logo"></img>
+                </a>
+                <div class="brand">
+                    <span>Catalyst Technical Group, INC.</span>
                 </div>
             </div>
         </div>
-    </nav>
+        
+        <nav class="navbar navbar-default" role="navigation">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="index.html">CTG, INC.</a>
+                </div>
+                <div class="collapse navbar-collapse navbar-ex1-collapse">
+                    <ul class="nav navbar-nav">
+                        <li><a href="index.html">Home</a>
+                        </li>
+                        <li><a href="projects.html">Projects</a>
+                        </li>
+                        <li><a href="services.html">Services</a>
+                        </li>
+                        <li><a href="resources.html" class="active">Resources</a>
+                        </li>
+                        <li><a href="contact.html">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
 
     <div class="container page-content-section">
         <div class="row">
