--- a/projects.html
+++ b/projects.html
@@ -18,91 +18,115 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-default" role="navigation">
+    <header class="header-wrapper">
         <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="index.html">CTG, INC.</a>
-            </div><div class="header-wrapper">
-                <div class="logo-wrapper">
-                    <a class="logo-link" href="index.html">
-                        <img src="img/logo.png" class="logo"></img>
-                    </a>
-                </div>
-                <div class="navigation-wrapper">
-                    <div class="brand">
-                        <span>Catalyst Technical Group, INC.</span>
-                    </div>
-                    <div class="collapse navbar-collapse navbar-ex1-collapse">
-                        <ul class="nav navbar-nav">
-                            <li><a href="index.html">Home</a>
-                            </li>
-                            <li><a href="projects.html" class="active">Projects</a>
-                            </li>
-                            <li><a href="services.html">Services</a>
-                            </li>
-                            <li><a href="resources.html">Resources</a>
-                            </li>
-                            <li><a href="contact.html">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
+            <div class="logo-wrapper">
+                <a class="logo-link" href="index.html">
+                    <img src="img/logo.png" class="logo"></img>
+                </a>
+                <div class="brand">
+                    <span>Catalyst Technical Group, INC.</span>
                 </div>
             </div>
         </div>
-    </nav>
+        
+        <nav class="navbar navbar-default" role="navigation">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="index.html">CTG, INC.</a>
+                </div>
+                <div class="collapse navbar-collapse navbar-ex1-collapse">
+                    <ul class="nav navbar-nav">
+                        <li><a href="index.html">Home</a>
+                        </li>
+                        <li><a href="projects.html" class="active">Projects</a>
+                        </li>
+                        <li><a href="services.html">Services</a>
+                        </li>
+                        <li><a href="resources.html">Resources</a>
+                        </li>
+                        <li><a href="contact.html">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
 
     <div class="container page-content-section">
-        <div class="box">
-            <div class="row">
-                <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h4>John Smith
-                        <small>Job Title</small>
-                    </h4>
+        <section>
+            <div class="row services">
+                <div class="col-md-4">
+                    <div class="panel panel-default">
+                      <div class="panel-heading"><h4>Four Point</h4></div>
+                      <div class="panel-body">
+                        <div class="img-stripe-border">
+                            <img class="img-responsive" src="../img/projects/Four-points.jpg" alt="">
+                        </div>
+                      </div>
+                    </div>
                 </div>
-                <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h4>John Smith
-                        <small>Job Title</small>
-                    </h4>
+                <div class="col-md-4">
+                    <div class="panel panel-default">
+                      <div class="panel-heading"><h4>Montessori</h4></div>
+                      <div class="panel-body">
+                        <div class="img-stripe-border">
+                            <img class="img-responsive" src="../img/projects/Montessori.jpg" alt="">
+                        </div>
+                      </div>
+                    </div>
                 </div>
-                <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h4>John Smith
-                        <small>Job Title</small>
-                    </h4>
+                <div class="col-md-4">
+                    <div class="panel panel-default">
+                      <div class="panel-heading"><h4>Shipley</h4></div>
+                      <div class="panel-body">
+                        <div class="img-stripe-border">
+                            <img class="img-responsive" src="../img/projects/Shipley.jpg" alt="">
+                        </div>
+                      </div>
+                    </div>
                 </div>
-                <div class="clearfix"></div>
             </div>
-
-            <div class="row">
-                <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h4>John Smith
-                        <small>Job Title</small>
-                    </h4>
+            
+            <div class="row services">
+                <div class="col-md-4">
+                    <div class="panel panel-default">
+                      <div class="panel-heading"><h4>HIE</h4></div>
+                      <div class="panel-body">
+                        <div class="img-stripe-border">
+                            <img class="img-responsive" src="../img/projects/HIE.jpg" alt="">
+                        </div>
+                      </div>
+                    </div>
                 </div>
-                <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h4>John Smith
-                        <small>Job Title</small>
-                    </h4>
+                <div class="col-md-4">
+                    <div class="panel panel-default">
+                      <div class="panel-heading"><h4>Gayatri</h4></div>
+                      <div class="panel-body">
+                        <div class="img-stripe-border">
+                            <img class="img-responsive" src="../img/projects/Gayatri.jpg" alt="">
+                        </div>
+                      </div>
+                    </div>
                 </div>
-                <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h4>John Smith
-                        <small>Job Title</small>
-                    </h4>
-                </div>
-                <div class="clearfix"></div>
+                <!--<div class="col-md-4">-->
+                <!--    <div class="panel panel-default">-->
+                <!--      <div class="panel-heading"><h4>Permit Co-ordination</h4></div>-->
+                <!--      <div class="panel-body">-->
+                <!--        <div class="img-stripe-border">-->
+                <!--            <img class="img-responsive" src="img/permit.jpg" alt="">-->
+                <!--        </div>-->
+                <!--      </div>-->
+                <!--    </div>-->
+                <!--</div>-->
             </div>
-        </div>
+        </section>
     </div>
     <!-- /.container -->
 
