--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
     <title>CTG, INC. - About</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Add custom CSS here -->
     <link href="css/base.css" rel="stylesheet">
@@ -63,7 +63,7 @@
         <section>
             <div class="row services">
                 <div class="col-md-4">
-                    <div class="panel panel-default">
+                    <div class="panel panel-default margin-bottom-40">
                       <div class="panel-heading"><h4>Four Point</h4></div>
                       <div class="panel-body">
                         <div class="img-stripe-border">
@@ -73,7 +73,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="panel panel-default">
+                    <div class="panel panel-default margin-bottom-40">
                       <div class="panel-heading"><h4>Montessori</h4></div>
                       <div class="panel-body">
                         <div class="img-stripe-border">
@@ -83,7 +83,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="panel panel-default">
+                    <div class="panel panel-default margin-bottom-40">
                       <div class="panel-heading"><h4>Shipley</h4></div>
                       <div class="panel-body">
                         <div class="img-stripe-border">
@@ -96,7 +96,7 @@
             
             <div class="row services">
                 <div class="col-md-4">
-                    <div class="panel panel-default">
+                    <div class="panel panel-default margin-bottom-40">
                       <div class="panel-heading"><h4>HIE</h4></div>
                       <div class="panel-body">
                         <div class="img-stripe-border">
@@ -106,7 +106,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="panel panel-default">
+                    <div class="panel panel-default margin-bottom-40">
                       <div class="panel-heading"><h4>Gayatri</h4></div>
                       <div class="panel-body">
                         <div class="img-stripe-border">
@@ -116,7 +116,7 @@
                     </div>
                 </div>
                 <!--<div class="col-md-4">-->
-                <!--    <div class="panel panel-default">-->
+                <!--    <div class="panel panel-default margin-bottom-40">-->
                 <!--      <div class="panel-heading"><h4>Permit Co-ordination</h4></div>-->
                 <!--      <div class="panel-body">-->
                 <!--        <div class="img-stripe-border">-->
