--- a/resources.html
+++ b/resources.html
@@ -76,7 +76,7 @@
                         <dl>
                           <dt><i class="fa fa-bookmark" aria-hidden="true"></i> Geographic Information & Management System- Publics works and engineering City of Houston , GIS </dt>
                           <dd>
-                              <a href="www.gims.houstontx.gov" target="GIMS" title="">www.gims.houstontx.gov</a>
+                              <a href="www.gims.houstontx.gov" target="GIMS" title="">www.gims.houstontx.gov</a><br/>
                               <a href="http://www.co.harris.tx.us/itc/gis" target="GIMSHarris" title="">http://www.co.harris.tx.us/itc/gis</a>
                           </dd>
                         </dl>
