--- a/services.html
+++ b/services.html
@@ -62,12 +62,12 @@
     
     <div class="container page-content-section">
         <div class="services-content">
-            <section id="civil">
+            <section class="margin-bottom-40" id="civil">
                 <h2 class="section-headings">CIVIL ENGINEERING</h2>
                 <div class="panel panel-default">
                   <div class="panel-body">
                       <div class="row">
-                          <div class="col-md-8">
+                          <div class="col-md-7">
                               <p>
                               Catalyst Technical Group's engineers and project managers have earned a reputation for delivering timely and economical
                                 solutions to virtually every type of civil engineering challenge. We command comprehensive and up to date knowledge of 
@@ -80,7 +80,7 @@
                                 moving to successful completion.
                               </p>
                           </div>
-                          <div class="col-md-4">
+                          <div class="col-md-5">
                              <p>Services include:</p> 
                              <ul>
                                 <li>Site Master Planning
@@ -104,12 +104,12 @@
                   </div>
                 </div>
             </section>
-            <section id="architectural">
+            <section class="margin-bottom-40" id="architectural">
                 <h2 class="section-headings">ARCHITECTURE</h2>
                 <div class="panel panel-default">
                   <div class="panel-body">
                       <div class="row">
-                          <div class="col-md-8">
+                          <div class="col-md-7">
                               <p>
                                Catalyst Technical Group, Inc.  provides high quality architectural design services. The Firm's multi-faceted partners hold over decade of combined architectural, building and planning expertise. Over the 
                             years, Catalyst Technical Group, Inc. has reinforced the true professionalism of architectural design with unique personal service and an attention to detail seldom found today. This has resulted in a variety of 
@@ -120,9 +120,9 @@
                             is a dependable architectural design team that works hard to keep every project within budge
                               </p>
                           </div>
-                          <div class="col-md-4">
+                          <div class="col-md-5">
                              <p>Services include:</p> 
-                             <ul>
+                             <ul >
                                 <li>Framing Systems (For Residential and Commercial Structures)</li>
                                 <li>Deep, Intermediate and Shallow Foundation Systems</li>
                                 <li>Tilt wall panels & Masonry structures</li>
@@ -134,12 +134,12 @@
                   </div>
                 </div>
             </section>
-            <section id="platting">
+            <section class="margin-bottom-40" id="platting">
                 <h2 class="section-headings">PLATTING</h2>
                 <div class="panel panel-default">
                   <div class="panel-body">
                       <div class="row">
-                          <div class="col-md-8">
+                          <div class="col-md-7">
                               <p>
                                Permitting to facilitate construction of improvements is a critical element in the overall project 
                             management process. Permitting can be extremely time consuming and may result in project delays and cost 
@@ -159,9 +159,9 @@
                             expeditious manner.
                               </p>
                           </div>
-                          <div class="col-md-4">
+                          <div class="col-md-5">
                              <p>Services include:</p> 
-                             <ul>
+                             <ul >
                                 <li>Framing Systems (For Residential and Commercial Structures)</li>
                                 <li>Deep, Intermediate and Shallow Foundation Systems</li>
                                 <li>Tilt wall panels & Masonry structures</li>
@@ -173,12 +173,12 @@
                   </div>
                 </div>
             </section>
-            <section id="structural">
+            <section class="margin-bottom-40" id="structural">
                 <h2 class="section-headings">STRUCTURAL</h2>
                 <div class="panel panel-default">
                   <div class="panel-body">
                       <div class="row">
-                          <div class="col-md-8">
+                          <div class="col-md-7">
                               <p>
                                Our structural engineering services bring to life the visions of the owner, architect and builder. CTG,Inc. 
                             provides engineering solution to a variety of complex structural challenges encountered to make the 
@@ -188,9 +188,9 @@
                             using best practices to create appropriate design solutions that will provide long-term value to our client.
                               </p>
                           </div>
-                          <div class="col-md-4">
+                          <div class="col-md-5">
                              <p>Services include:</p> 
-                             <ul>
+                             <ul >
                                 <li>Framing Systems (For Residential and Commercial Structures)</li>
                                 <li>Deep, Intermediate and Shallow Foundation Systems</li>
                                 <li>Tilt wall panels & Masonry structures</li>
@@ -203,12 +203,12 @@
                 </div>
             </section>
 
-            <section id="mep">
+            <section class="margin-bottom-40" id="mep">
                 <h2 class="section-headings">MEP</h2>
                 <div class="panel panel-default">
                   <div class="panel-body">
                       <div class="row">
-                          <div class="col-md-8">
+                          <div class="col-md-7">
                               <p>
                                CTG provides Mechanical, HVAC, Electrical, and Plumbing (MEP) services for its diverse clients. Company 
                             professionals are highly-experienced in the design of systems of new construction, as well as retrofit of 
@@ -219,9 +219,9 @@
                             the design of smart and efficient MEP systems.
                               </p>
                           </div>
-                          <div class="col-md-4">
+                          <div class="col-md-5">
                              <p>Services include:</p> 
-                             <ul>
+                             <ul >
                                 <li>Framing Systems (For Residential and Commercial Structures)</li>
                                 <li>Deep, Intermediate and Shallow Foundation Systems</li>
                                 <li>Tilt wall panels & Masonry structures</li>
@@ -233,12 +233,12 @@
                   </div>
                 </div>
             </section>
-            <section id="permit">
+            <section class="margin-bottom-40" id="permit">
                 <h2 class="section-headings">PERMIT CO-ORDINATION</h2>
                 <div class="panel panel-default">
                   <div class="panel-body">
                       <div class="row">
-                          <div class="col-md-8">
+                          <div class="col-md-7">
                               <p>
                                Permitting to facilitate construction of improvements is a critical element in the overall project 
                             management process. Permitting can be extremely time consuming and may result in project delays and cost 
@@ -258,9 +258,9 @@
                             expeditious manner.
                               </p>
                           </div>
-                          <div class="col-md-4">
+                          <div class="col-md-5">
                              <p>Services include:</p> 
-                             <ul>
+                             <ul >
                                 <li>Framing Systems (For Residential and Commercial Structures)</li>
                                 <li>Deep, Intermediate and Shallow Foundation Systems</li>
                                 <li>Tilt wall panels & Masonry structures</li>
